<resources>
    <string name="app_name">Uz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="station_from">From:</string>
    <string name="station_till">Till:</string>
    <string name="date_button">Choose Date</string>
    <string name="time_button">Time</string>
    <string name="search_button">Search</string>
    <string name="train_number">Train №</string>
    <string name="from_till">From/Till</string>
    <string name="date">Date</string>
    <string name="departure_arrival">Dep./Arr.</string>
    <string name="duration">Duration</string>
    <string name="free_places">Free places</string>
    <string-array name="hours">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
</resources>
