<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train_number"
            android:padding="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_till"
            android:padding="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:padding="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_arrival"
            android:padding="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:padding="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_places"
            android:padding="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/train_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/from_till"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/dep_arr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/free_places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>

    </LinearLayout>
    </LinearLayout>

</LinearLayout>